# sakkoubot

./: .gitignore  README.md  notes.md
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: config.py  database.py  main.py  models.py
backend/app/routers/: bots.py  chat.py  jobs.py
backend/app/services/: rag.py
frontend/: app.jsx  chat.jsx  config.example.js  config.js  index.html  selector.jsx  vercel.json
