[project]
name = "sakkoubot"
version = "0.1.0"
description = "SakkouBot backend — LLM-powered RAG chatbot for Guilan Incubation Center"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-qdrant>=0.2.0",
    "langchain-community>=0.3.0",
    "qdrant-client>=1.12.0",
    "python-multipart>=0.0.12",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "python-dotenv>=1.0.0",
    "pypdf>=5.0.0",
    "docx2txt>=0.8",
    "pydantic-settings>=2.6.0",
    "langchain-experimental>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
